base/course-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
  labels:
    app.kubernetes.io/name: course-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: course-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: course-app
    spec:
      containers:
        - name: course-app
          image: pimenov2unit/course-app:lesson-12
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
